crates/tuna/tests/parser/fail/malformed-kw-unary.som
"test:
fail-message:
  contains: keyword selector
"

MalformedKwUnary = (
  run = (
    #foo:bar.
  )
)
